syntax="proto3";
option go_package="/pb";

import "google/protobuf/empty.proto";

service ProductService {
//  Product
  rpc ProductList(ProductConditionReq) returns (ProductsRes);
  rpc BatchGetProduct(BatchProductIdReq) returns (ProductsRes);
  rpc CreateProduct(CreateProductReq) returns (ProductItemRes);
  rpc DeleteProduct(ProductDelReq) returns (google.protobuf.Empty);
  rpc UpdateProduct(CreateProductReq) returns (google.protobuf.Empty);
  rpc GetProductDetail(ProductItemReq) returns (ProductItemRes);

//  Category
  rpc GetAllCategoriesList(google.protobuf.Empty) returns (CategoriesRes);
  rpc GetSubCategory(CategoriesReq) returns (SubCategoriesRes);
  rpc CreateCategory(CreateCategoryReq) returns (CategoryItemRes);
  rpc DeleteCategory (CategoryDelReq) returns(google.protobuf.Empty);
  rpc UpdateCategory(CreateCategoryReq) returns(google.protobuf.Empty);
// Brand
  rpc BrandList(BrandPagingReq) returns (BrandRes);
  rpc CreateBrand(BrandItemReq) returns (BrandItemRes);
  rpc DeleteBrand(BrandItemReq) returns(google.protobuf.Empty);
  rpc UpdateBrand(BrandItemReq) returns (google.protobuf.Empty);
// Advertise
  rpc AdvertiseList(google.protobuf.Empty) returns (AdvertisesRes);
  rpc CreateAdvertise(AdvertiseReq) returns (AdvertiseItemRes);
  rpc DeleteAdvertise(AdvertiseReq) returns(google.protobuf.Empty);
  rpc UpdateAdvertise(AdvertiseReq) returns(google.protobuf.Empty);
// BrandCategory
  rpc CategoryBrandList(PagingReq) returns (CategoryBrandListRes);
  rpc GetCategoryBrandList(CreateCategoryReq) returns (BrandItemRes);
  rpc CreateCategoryBrand(CategoryBrandReq) returns(CategoryBrandRes);
  rpc DeleteCategoryBrand(CategoryBrandReq) returns(google.protobuf.Empty);
  rpc UpdateCategoryBrand(CategoryBrandReq) returns(google.protobuf.Empty);
 }

message CategoryBrandReq {
  int32 id=1;
  BrandItemRes brand=2;
  CategoryItemRes category=3;
}

 message CategoryBrandRes {
    int32 id=1;
    BrandItemRes brand=2;
    CategoryItemRes category=3;
 }

message CategoryBrandListRes {
  int32 total =1;
  repeated CategoryBrandRes itemList =2;
}

message PagingReq {
  int32 page=1;
  int32 pageSize=2;
}

message AdvertiseReq {
  int32 id=1;
  int32 index=2;
  string image=3;
  string url=4;
}

message AdvertisesRes {
  int32 total =1;
  repeated AdvertiseItemRes itemList=2;
}

message AdvertiseItemRes {
  int32 id=1;
  int32 index=2;
  string image=3;
  string url=4;
}

message BrandItemReq {
  int32 id=1;
  string name=2;
  string logo=3;
}

message BrandPagingReq {
  int32 page=1;
  int32 pageSize=2;
}

message BrandRes {
  int32 total=1;
  repeated BrandItemRes itemList = 2;
}

message BrandItemRes {
  int32 id=1;
  string name=2;
  string logo=3;
}

message CategoryDelReq {
  int32 id=1;
}

message CategoriesReq {
  int32 id=1;
  int32 level=2;
}

message SubCategoriesRes {
  int32 total =1;
  CategoryItemRes info = 2;
  repeated CategoryItemRes subCategoryList = 3;
  string categoryJsonFormat=4;
}

message CategoriesRes {
  int32 total =1;
  repeated CategoryItemRes infoResList = 2;
  string categoryJsonFormat=3;
}


message CategoryItemRes {
  int32 id = 1;
  string name=2;
  int32 parentCategoryId=3;
  int32 level=4;
}

message CreateCategoryReq {
  int32 id = 1;
  string name=2;
  int32 parentCategoryId=3;
  int32 level=4;
}

message ProductDelReq {
  int32 id =1;
}

message ProductItemReq {
  int32 id =1;
}

message CreateProductReq {
  int32 id=1;
  string name=2;
  string sn=3;
  int32 stocks=4;
  float price=5;
  float realPrice=6;
  string shortDesc=7;
  string productDesc=8;
  repeated string images=9;
  repeated string descImages=10;
  string coverImage=11;
  bool isNew=12;
  bool isPop=13;
  bool selling=14;
  int32 brandId=15;
  int32 favNum=16;
  int32 soldNum=17;
}

message BatchProductIdReq {
  repeated int32 ids=1;
}

message ProductConditionReq {
  int32 minPrice=1;
  int32 maxPrice=2;
  bool isPop=3;
  bool isName=4;
  int32 categoryId=5;
  int32 pageNo=6;
  int32 pageSize=7;
  string keyWord=8;
  int32 brandId=9;
}

message ProductItemRes {
  int32 id=1;
  int32 categoryId=2;
  string name=3;
  string sn=4;
  int32 stocks=5;
  int32 soldNum=6;
  int32 favNum=7;
  float price=8;
  float realPrice=9;
  string shortDesc=10;
  string desc=11;
  repeated string images=12;
  repeated string descImages=13;
  string coverImage=14;
  bool isNew=15;
  bool isPop=16;
  bool selling=17;
  int64 addTime=18;
  CategoryItemRes category=19;
  BrandItemRes brand=20;
}

message ProductsRes {
  int32 total=1;
  repeated ProductItemRes itemList = 2;
}
